--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -25,7 +25,8 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{0.0.4}{21/02/2021}{Giovanni Cocco}{Redazione}{Aggiunta dashboard al docuemento.}
 \addversione{2.0.0}{23/03/2021}{Elia Scandaletti}{Redazione}{Rifacimento del documento.}
 \addversione{2.1.0}{30/03/2021}{Giovanni Cocco}{Redazione}{Aggiornamento per ciclo 1.}
-\addversione{2.2.0}{07/04/2021}{Matteo Galvagni}{Redazione}{Aggiornamento per ciclo 2.}
+\addversione{2.2.0}{03/04/2021}{Matteo Galvagni}{Redazione}{Aggiunto preventivo per ciclo 2.}
+\addversione{2.3.0}{07/04/2021}{Matteo Galvagni}{Redazione}{Aggiornamento ciclo 2.}
 
 \begin{document}
 
