--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -25,7 +25,9 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB}
 \addversione{2.0.0}{19/03/2022}{Giovanni Cocco}{Redazione}{Rifacimento documento}
 \addversione{2.1.0}{27/03/2022}{Giovanni Cocco}{Redazione}{Ciclo 1}
-\addversione{2.2.0}{08/04/2022}{Matteo Galvagni}{Redazione}{Ciclo 2}
+\addversione{2.2.0}{03/04/2021}{Matteo Galvagni}{Redazione}{Aggiunto preventivo per ciclo 2.}
+\addversione{2.3.0}{07/04/2021}{Matteo Galvagni}{Redazione}{Aggiornamento ciclo 2.}
+
 
 
 \def\pgfcalendarmonthitname#1{%
