documenti per PB

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -11,7 +11,7 @@
 \input{\templates/front_page}
 \input{\templates/history}
 
-\settitolo{Analisi dei requisiti - v1.0.3} 
+\settitolo{Analisi dei requisiti} 
 \setprogetto{ShopChain}
 \setcommittenti{SyncLab}
 \setredattori{Alberto Nicoletti\\Andrea Volpe}
