--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -27,7 +27,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{2.1.0}{27/03/2022}{Giovanni Cocco}{Redazione}{Ciclo 1}
 \addversione{2.2.0}{03/04/2021}{Matteo Galvagni}{Redazione}{Aggiunto preventivo per ciclo 2.}
 \addversione{2.3.0}{07/04/2021}{Matteo Galvagni}{Redazione}{Aggiornamento ciclo 2.}
-
+\addversione{2.4.0}{02/04/2022}{Federico Marchi}{Redazione}{Aggiunto preventivo per ciclo 3.}
 
 
 \def\pgfcalendarmonthitname#1{%
@@ -456,6 +456,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         Aggiornamento documento \textit{Analisi dei Requisiti} & 3\\
         \hline
         Stesura manuale e-commerce & 2\\
+        \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
 \end{center}
@@ -554,6 +555,74 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \textbf{Nozione} & \textbf{Conseguenza sulla pianificazione}\\
         \hline
         Necessità di considerare nel preventivo possibili problematiche con le tecnologie utilizzate & Futura aggiunta di alcune ore nel preventivo per risoluzione di eventuali bug\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\subsection{Sprint 3}
+\textbf{Data di inizio:} 06-04-2022\\
+\textbf{Data di fine pianificata:} 13-04-2022\\
+\textbf{Data di fine effettiva:} TODO
+
+\subsubsection{Pianificazione}\mbox{}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Item da realizzare}}\\
+        \hline
+        \hline
+        \textbf{Item} & \textbf{Persone richieste}\\
+        \hline
+        Continuare stesura documento \textit{Specifiche architetturali} & 2\\
+        \hline
+        Continuare stesura documento \textit{Manuale Installazione} & 1\\
+        \hline
+        Css per la webapp & 3\\
+        \hline
+        Aggiornamento cartella pubblica & 2\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 5  & 150\\
+        \hline
+        Amministratore  & 20 & 15  & 300\\
+        \hline
+        Analista        & 25 & 5  & 125\\
+        \hline
+        Progettista     & 25 & 5  & 125\\
+        \hline
+        Programmatore   & 15 & 30  & 450\\
+        \hline
+        Verificatore    & 15 & 15  & 225\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 75 & 1375\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Possibili problematiche}}\\
+        \hline
+        \hline
+        \textbf{Problema} & \textbf{Misure di mitigazione}\\
+        \hline
+        Eventuali dubbi sulla realizzazione della grafica della webapp & Si richiederà un colloquio con il proponente per dei chiarimenti\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
