Specifiche architetturali - testing server

--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -160,6 +160,9 @@ Facilita il tracciamento delle dipendenze e agevola il mocking in fase di test.
 \paragraph{Commenti}
 Schema delle tabelle del database.\\
 \textbf{LastSyncedBlock} contiene una sola riga con \textit{id} 0 con il valore dell'ultimo blocco sincronizzato.
+\subsubsection{Testing}
+Per testare le funzionalità del server viene utilizzato il framework Jest. Vengono eseguiti dei test di copertura automatici sia sulla parte di gestione delle risposte al cliente, sia sulla parte di persistenza. \\
+Per eseguire i test è sufficiente eseguire il comando \texttt{npm test} all'interno della cartella \texttt{server}.
 
 \newpage
 \subsection{Smart contract}
