Aggiunti comandi semantici

--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -277,11 +277,11 @@ Per eseguire i test sarà necessario:
 
 \subsection{Script di messa in vendita}
 \subsubsection{sell\_item}
-\textbf{Parametri}\\
-price: float - il prezzo in dollari della entry di pagamento.\\\\
-\textbf{Valore Restituito}\\
-entry id: int - l'id dell'entry inserita in blockchain (-1 in caso di errore).\\\\
-\textbf{Comportamento}\\
+\paragraph{Parametri}\\
+price: float - il prezzo in dollari della entry di pagamento.
+\paragraph{Valore Restituito}\\
+entry id: int - l'id dell'entry inserita in blockchain (-1 in caso di errore).
+\paragraph{Comportamento}\\
 Il metodo inserisce una nuova entry di pagamento in blockchain con il prezzo specificato.\\
 Sia in caso si successo che di errore tutte le informazioni vengono salvate nel file \textit{sell.log}.
 
