--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -286,7 +286,8 @@ entry id: int - l'id dell'entry inserita in blockchain (-1 in caso di errore).
 Il metodo inserisce una nuova entry di pagamento in blockchain con il prezzo specificato.\\
 Sia in caso si successo che di errore tutte le informazioni vengono salvate nel file \textit{sell.log}.
 \subsubsection{Testing}
-I test vengono eseguiti attraverso le funzioni nel file \texttt{test\_sell.py}. I test coprono sia un caso di successo, sia un caso di fallimento. I test eseguono sia lo script simulando una linea di comando, sia importando la funzione \texttt{sell\_item} ed eseguendola.
+I test vengono eseguiti usando il framework PyTest alla versione 6.2.5 (\href{https://docs.pytest.org/en/6.2.x/}{https://docs.pytest.org/en/6.2.x/}). \\
+I test coprono sia un caso di successo, sia un caso di fallimento. I test eseguono sia lo script simulando una linea di comando, sia importando la funzione \texttt{sell\_item} ed eseguendola.
 
 \section{Diagrammi di sequenza}
 \subsection{Inizializzazione server web}
