--- a/docs/esterni/lettera_pb/lettera_di_presentazione.tex
+++ b/docs/esterni/lettera_pb/lettera_di_presentazione.tex
@@ -11,7 +11,7 @@
 Egregio Prof. Vardanega,\\\\
 con la presente, il gruppo Winning Software Solution desidererebbe candidarsi in maniera ufficiale
 per la fase di PB.\\\\
-Nel repository è presente una cartella \textit{public} contentente tutti i documenti per le consegne. Ignorare tutti i file
+Nel repository è presente una cartella \textit{public} contenente tutti i documenti per le consegne. Ignorare tutti i file
 al di fuori della cartella \textit{public}.\\
 Nel repository all'indirizzo: \\
 \href{https://github.com/iota97/WinningSoftwareSolution/tree/main/public}{\underline{https://github.com/iota97/WinningSoftwareSolution/tree/main/public}}\\ 
