--- a/docs/esterni/manuale_installazione/manuale_installazione.tex
+++ b/docs/esterni/manuale_installazione/manuale_installazione.tex
@@ -15,9 +15,13 @@
 Manuale installazione.
 }
 
-\begin{document}
+\addversione{0.0.0}{04/04/2022}{Federico Marchi}{Redazione}{Stesura Manuale}
 
+\begin{document}
 \makefrontpage
+
+\makeversioni
+
 \tableofcontents
 \newpage
 
