--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -18,14 +18,15 @@
 Questo documento serve a definire le metriche e i criteri di accettazione dei prodotti.
 }
 
-\addversione{0.0.0}{09/01/2021}{Raffaele Oliviero}{Redazione}{Stesura iniziale.}
-\addversione{0.0.1}{16/01/2021}{Elia Scandaletti}{Redazione}{Correzione indice di Gulpease.}
-\addversione{0.0.2}{16/01/2021}{Giovanni Cocco}{Redazione}{Migliorata la leggibilità.}
-\addversione{0.0.3}{04/02/2021}{Giovanni Cocco}{Redazione}{Stesura iniziale sezione software.}
-\addversione{0.0.4}{21/02/2021}{Giovanni Cocco}{Redazione}{Aggiunta dashboard al docuemento.}
-\addversione{2.0.0}{23/03/2021}{Elia Scandaletti}{Redazione}{Rifacimento del documento.}
-\addversione{2.1.0}{30/03/2021}{Giovanni Cocco}{Redazione}{Aggiornamento per ciclo 1.}
-\addversione{2.2.0}{07/04/2021}{Matteo Galvagni}{Redazione}{Aggiornamento per ciclo 2.}
+\addversione{0.0.0}{09/01/2022}{Raffaele Oliviero}{Redazione}{Stesura iniziale.}
+\addversione{0.0.1}{16/01/2022}{Elia Scandaletti}{Redazione}{Correzione indice di Gulpease.}
+\addversione{0.0.2}{16/01/2022}{Giovanni Cocco}{Redazione}{Migliorata la leggibilità.}
+\addversione{0.0.3}{04/02/2022}{Giovanni Cocco}{Redazione}{Stesura iniziale sezione software.}
+\addversione{0.0.4}{21/02/2022}{Giovanni Cocco}{Redazione}{Aggiunta dashboard al docuemento.}
+\addversione{2.0.0}{23/03/2022}{Elia Scandaletti}{Redazione}{Rifacimento del documento.}
+\addversione{2.1.0}{30/03/2022}{Giovanni Cocco}{Redazione}{Aggiornamento per ciclo 1.}
+\addversione{2.2.0}{07/04/2022}{Matteo Galvagni}{Redazione}{Aggiornamento per ciclo 2.}
+\addversione{2.2.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento per ciclo 3.}
 
 \begin{document}
 
@@ -118,12 +119,14 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-02-26, 72.56)
 					(2022-03-23, 72.44)
 					(2022-04-07, 66.92)
+					(2022-04-13, 68.26)
 				};\addlegendentry{Verbali interni}
 
 			\addplot coordinates {
 					(2022-03-02, 55.2)
 					(2022-03-27, 55.15)
 					(2022-04-07, 55.19)
+					(2022-04-13, 55.15)
 				};\addlegendentry{Norme di progetto}
 
 		\end{axis}
@@ -175,18 +178,21 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-03-23, 55.2)
 					(2022-03-27, 55.16)
 					(2022-04-07, 55.17)
+					(2022-04-13, 55.53)
 				};\addlegendentry{Analisi dei requisiti}
 
 			\addplot coordinates {
 					(2022-03-23, 40.8)
 					(2022-03-27, 41.8)
 					(2022-04-07, 42.58)
+					(2022-04-13, 43.22)
 				};\addlegendentry{Piano di progetto}
 
 			\addplot coordinates {
 					(2022-03-23, 50.00)
 					(2022-03-27, 51.76)
 					(2022-04-07, 56.17)
+					(2022-04-13, 56.15)
 				};\addlegendentry{Piano di qualifica}
 
 		\end{axis}
@@ -380,7 +386,7 @@ La metrica si basa sulla variazione percentuale rispetto alla stima iniziale.
 \end{center}
 
 \subparagraph{Struttura del grafico:}
-Ogni punto indica la variazione del consultivo rispetto al preventivo di un ciclo di sprint.
+Ogni punto indica la variazione del consuntivo rispetto al preventivo di un ciclo di sprint.
 
 \subparagraph{Andamento:}
 \begin{center}
@@ -415,11 +421,13 @@ Ogni punto indica la variazione del consultivo rispetto al preventivo di un cicl
 					(2022-03-23, 0)
 					(2022-03-30, +25)
 					(2022-04-07, +14)
+					(2022-04-14, -9)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
 					(2022-03-30, -33)
 					(2022-04-07, -18)
+					(2022-04-14, -15)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
@@ -445,7 +453,7 @@ La metrica si basa sulla variazione percentuale rispetto alla stima iniziale.
 \end{center}
 
 \subparagraph{Struttura del grafico:}
-Ogni punto indica la variazione del consultivo rispetto al preventivo di un ciclo di sprint.
+Ogni punto indica la variazione del consuntivo rispetto al preventivo di un ciclo di sprint.
 
 \subparagraph{Andamento:}
 \begin{center}
@@ -480,11 +488,13 @@ Ogni punto indica la variazione del consultivo rispetto al preventivo di un cicl
 					(2022-03-23, 0)
 					(2022-03-30, +30)
 					(2022-04-07, +18)
+					(2022-04-14, -8)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
 					(2022-03-30, -33)
 					(2022-04-07, -29)
+					(2022-04-14, -16)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
