--- a/docs/interni/verbali/2022_04_13_I/2022_04_13_I.tex
+++ b/docs/interni/verbali/2022_04_13_I/2022_04_13_I.tex
@@ -59,8 +59,16 @@ Sono state determinate le seguenti tasks per il ciclo di sprint 3:
     \item correggere l'ortografia in alcuni documenti;
 	\item finire manuale installazione
 	\item sviluppare la grafica della web-app
-	\item completare la web app (tasti copia, footer, metatag...)
-	\item rendere accessibile la web-app
+	\item completare la web app:
+	    \begin{itemize}
+	        \item tasti per copia indirizzi;
+            \item tag Aria sui bottoni;
+            \item metatag nelle pagine;
+            \item logo nell' header;
+            \item completare il menu ad hamburger;
+            \item completare il footer.
+	    \end{itemize}
+	\item rendere accessibile la web-app, in particolare la lista transazioni.
 \end{enumerate}
 
 \section{Impegni presi}
@@ -69,7 +77,7 @@ L'assegnazione delle tasks ai membri per il ciclo di sprint 4 è avvenuta come s
 	\item Elia Scandaletti: task 1, 2 e 3;
 	\item Federico Marchi: task 4;
 	\item Federico Marchi, Alberto Nicoletti, Raffaele Oliviero e Andrea Volpe: task 5, 6 e 7;
-	\item Giovanni Cocco e Matteo Galvagni : revisione.
+	\item Giovanni Cocco e Matteo Galvagni : revisione delle task.
 \end{itemize}
 
 \end{document}
