--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -12,7 +12,7 @@
 \input{\templates/history}
 
 \settitolo{Piano di Qualifica}
-\setredattori{Raffaele Oliviero \\ Elia Scandaletti \\ Giovanni Cocco}
+\setredattori{Raffaele Oliviero \\ Elia Scandaletti \\ Giovanni Cocco \\ Matteo Galvagni \\ Federico Marchi}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento serve a definire le metriche e i criteri di accettazione dei prodotti.
@@ -26,7 +26,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{2.0.0}{23/03/2022}{Elia Scandaletti}{Redazione}{Rifacimento del documento.}
 \addversione{2.1.0}{30/03/2022}{Giovanni Cocco}{Redazione}{Aggiornamento per ciclo 1.}
 \addversione{2.2.0}{07/04/2022}{Matteo Galvagni}{Redazione}{Aggiornamento per ciclo 2.}
-\addversione{2.2.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento per ciclo 3.}
+\addversione{2.3.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento per ciclo 3.}
 
 \begin{document}
 
