--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -12,7 +12,7 @@
 \input{\templates/history}
 
 \settitolo{Piano di Progetto}
-\setredattori{Elia Scandaletti \\ Giovanni Cocco \\ Matteo Galvagni \\ Federico Marchi}
+\setredattori{Elia Scandaletti \\ Giovanni Cocco \\ Matteo Galvagni \\ Federico Marchi \\ Alberto Nicoletti}
 \setresponsabili{Giovanni Cocco}
 \setdestuso{esterno}
 \setdescrizione{
@@ -30,6 +30,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{2.4.0}{07/04/2022}{Federico Marchi}{Redazione}{Aggiunto preventivo per ciclo 3.}
 \addversione{2.4.1}{08/04/2022}{Matteo Galvagni}{Redazione}{Correzione errore Gantt.}
 \addversione{2.5.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento ciclo 3.}
+\addversione{2.6.0}{16/04/2022}{Alberto Nicoletti}{Redazione}{Aggiunto preventivo per ciclo 4.}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -684,4 +685,81 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
     \end{tabularx}\\[8pt]
     \mbox{}\\
 \end{center}
+
+\subsection{Sprint 4}
+\textbf{Data di inizio:} 13-04-2022\\
+\textbf{Data di fine pianificata:} 20-04-2022\\
+\textbf{Data di fine effettiva:} TODO
+
+\subsubsection{Pianificazione}\mbox{}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Item da realizzare}}\\
+        \hline
+        \hline
+        \textbf{Item} & \textbf{Persone richieste}\\
+        \hline
+        Scrivere uno script per la pubblicazione automatica dei documenti redatti. & 1\\
+        \hline
+        Aggiornare la cartella public e le norme di progetto. & 1\\
+        \hline
+        Correggere l’ortografia in alcuni documenti. & 1\\
+        \hline
+        Finire la stesura del manuale d'installazione. & 1\\
+        \hline
+		Sviluppare la grafica della web-app. & 2 \\
+		\hline
+		Completare le funzionalità della web-app. & 2 \\
+		\hline
+		Rendere accessibile la web-app. & 2 \\
+		\hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 7  & 210\\
+        \hline
+        Amministratore  & 20 & 10  & 200\\
+        \hline
+        Analista        & 25 & 0  & 0\\
+        \hline
+        Progettista     & 25 & 4  & 100\\
+        \hline
+        Programmatore   & 15 & 30  & 450\\
+        \hline
+        Verificatore    & 15 & 8  & 120\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 59 & 1080\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Possibili problematiche}}\\
+        \hline
+        \hline
+        \textbf{Problema} & \textbf{Misure di mitigazione}\\
+        \hline
+        Eventuali dubbi sulla realizzazione della grafica della webapp. & Si richiederà un colloquio con il proponente per dei chiarimenti.\\
+        \hline
+        Il colloquio PB può non avere un riscontro positivo. & Verrano messe in pausa le task programmate per concentrarsi sulla correzione degli errori.\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
 \end{document}
