gantt e cambio ore preventivo

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -70,8 +70,10 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \ganttbar[progress=100]{Sviluppo Server}{2022-02-26}{2022-03-29} \\
 \ganttbar[progress=100]{Sviluppo Script Python}{2022-02-26}{2022-03-29} \\
 \ganttbar[progress=100]{Sviluppo WebApp}{2022-02-26}{2022-03-29} \\
-\ganttgroup[progress=15]{CA}{2022-04-07}{2022-04-29} \\
+\ganttgroup[progress=15]{CA}{2022-04-07}{2022-05-12} \\
 \ganttbar[progress=75]{Manuale Installazione}{2022-03-30}{2022-04-14} \\
+\ganttbar[progress=10]{Completamento WebApp}{2022-04-14}{2022-04-25} \\
+\ganttbar[progress=0]{Validazione}{2022-04-27}{2022-05-11}
 \end{ganttchart}
 \captionof{figure}{Diagramma di Gannt del progetto}
 
@@ -689,7 +691,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
 \subsection{Sprint 4}
 \textbf{Data di inizio:} 13-04-2022\\
 \textbf{Data di fine pianificata:} 20-04-2022\\
-\textbf{Data di fine effettiva:} TODO
+\textbf{Data di fine effettiva:} TBD
 
 \subsubsection{Pianificazione}\mbox{}
 
@@ -727,20 +729,20 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \hline
         \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
         \hline
-        Responsabile    & 30 & 7  & 210\\
+        Responsabile    & 30 & 3  & 90\\
         \hline
-        Amministratore  & 20 & 10  & 200\\
+        Amministratore  & 20 & 3  & 60\\
         \hline
         Analista        & 25 & 0  & 0\\
         \hline
-        Progettista     & 25 & 4  & 100\\
+        Progettista     & 25 & 2  & 50\\
         \hline
-        Programmatore   & 15 & 30  & 450\\
+        Programmatore   & 15 & 10  & 150\\
         \hline
-        Verificatore    & 15 & 8  & 120\\
+        Verificatore    & 15 & 3  & 45\\
         \hline
         \hline
-        \textbf{Totale} &    & 59 & 1080\\
+        \textbf{Totale} &    & 21 & 395\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
@@ -753,8 +755,6 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \hline
         \hline
         \textbf{Problema} & \textbf{Misure di mitigazione}\\
-        \hline
-        Eventuali dubbi sulla realizzazione della grafica della webapp. & Si richiederà un colloquio con il proponente per dei chiarimenti.\\
         \hline
         Il colloquio PB può non avere un riscontro positivo. & Verrano messe in pausa le task programmate per concentrarsi sulla correzione degli errori.\\
         \hline
